--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-passport": "^1.5.0",
-    "loopback-connector-cloudant": "^1.0.1",
     "loopback-connector-rest": "^1.10.1",
     "loopback-datasource-juggler": "^2.19.0",
     "loopback-explorer": "^1.8.0",
     "mongodb": "^3.0.3",
     "newman": "^3.9.3",
-    "strong-error-handler": "^2.3.0"
+    "strong-error-handler": "^2.3.0",
+    "xml-js": "^1.6.11"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
